// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: pointer;
}

.c3 {
  font-size: 0.8em;
  margin-left: 0;
}

.c1 {
  width: 20px;
  height: 20px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid;
  border-radius: 2px;
  -webkit-transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dedede;
}

.c1:hover,
.c1:focus {
  border-color: #b5b5b5;
}

.c1:active {
  color: #ffffff;
  background-color: #0078d4;
  border-color: #0078d4;
}

.c2 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: pointer;
}

<label
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <span
    className="c3"
  />
</label>
`;

exports[`Checkbox prop disabled 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  cursor: not-allowed;
}

.c3 {
  font-size: 0.8em;
  margin-left: 0;
}

.c1 {
  width: 20px;
  height: 20px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid;
  border-radius: 2px;
  -webkit-transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  transition: all 250ms cubic-bezier(0.76,0.24,0.23,0.94) 0ms;
  color: #000000;
  background-color: #ffffff;
  border-color: #dedede;
  color: #8c8c8c;
  background-color: #e9e9e9;
  border-color: #dedede;
  pointer-events: none;
}

.c1:hover,
.c1:focus {
  border-color: #b5b5b5;
}

.c1:active {
  color: #ffffff;
  background-color: #0078d4;
  border-color: #0078d4;
}

.c2 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: not-allowed;
}

<label
  className="c0"
  disabled={true}
>
  <div
    className="c1"
    disabled={true}
  >
    <input
      className="c2"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <span
    className="c3"
  />
</label>
`;
